# fastuator

./: .gitignore  README.md  pyproject.toml  pytest.ini
examples/: basic_app.py
fastuator/: __init__.py  checks.py  core.py
tests/: conftest.py  test_endpoints.py
